# cmakeable_server

./: CMakeLists.txt  CMakeRun.sh
AsyncServerParent/: CMakeLists.txt
AsyncServerParent/include/: ClientManager.h  Macros.h  TCPConnection.h
AsyncServerParent/src/: ClientManager.cpp  TCPConnection.cpp
Example/: CMakeLists.txt
Example/src/: source.cpp
HtmlHandle/: CMakeLists.txt
HtmlHandle/include/: base64_converter.h  dataframe.h  dataframe_manager.h  dataframe_parser.h  handshake_manager.h  reply.h  request_parser.h
HtmlHandle/src/: SHA1.cpp  base64_converter.cpp  dataframe.cpp  dataframe_manager.cpp  handshake_manager.cpp
WSS_Server/: CMakeLists.txt
WSS_Server/src/: WSS_TCPAcceptor.cpp  WSS_TCPConnection.cpp
WS_Server/: CMakeLists.txt  CMakeLists.txt~
WS_Server/include/: WSHeaderManager.h  WSIPacket.h  WSOPacket.h  WSServer.h
WS_Server/include/Packets/: PackFW.pb.h
WS_Server/packets/: PackFW.pb.cc  PackFW.pb.h  PackFW.proto
WS_Server/src/: Source.cpp  WSHeaderManager.cpp  WSIPacket.cpp  WSOPacket.cpp  WSServer.cpp
WS_Server/src/Packets/: PackFW.pb.cc
